# peregrineRts

./: ARCHITECTURE.md  Cargo.toml  DEBUGGING_FREEZES.md  PLAN.md  check_architecture.ps1  game_log.txt  perf_test_latest.txt  pf_profile_output.txt  run_100k_test.bat  test_100k_batch.txt  test_batch_fixed.txt  test_batch_result.txt  test_output.txt  test_staging.bat
assets/: game_config.ron  initial_config.ron
assets/maps/: default.pmap
crates/peregrine_macros/: Cargo.toml
documents/: CURRENT_IMPROVEMENTS.md  KNOWN_ISSUES.md  PERFORMANCE_BOTTLENECKS.md  README.md  STRESS_TEST_FINDINGS.md
documents/Active Issues/: editor.md  pathfinding.md  pathfinding_bugs_found.md  performance.md  spatial_hash_findings_summary.md  spatial_hash_optimization_recommendations.md  spatial_hash_verification.md
documents/Design docs/: BOIDS_STEERING.md  COLLISION_HANDLING.md  IMPLEMENTATION_SUMMARY.md  MAP_FILE_FORMAT.md  PATHFINDING.md  PATHFINDING_ARENA_OPTIMIZATION.md  PATHFINDING_MIGRATION.md  PATHFINDING_UPDATE.md  SIMULATION_SYSTEMS.md  SPATIAL_PARTITIONING.md
documents/Guidelines/: ARCHITECTURE.md  GUIDELINES.md
documents/Planning/: PLAN.md  POST_PRODUCTION.md
examples/: stage_stats.rs
src/: game.rs  lib.rs  main.rs
src/game/: camera.rs  config.rs  control.rs  editor.rs  flow_field.rs  hud.rs  loading.rs  map.rs  math.rs  menu.rs  pathfinding.rs  profiling.rs  (+5 more)
tests/: boids_performance.rs  collision_integration.rs  determinism_test.rs  graph_build_integration.rs  incremental_spatial_hash.rs  pathfinding_integration.rs  performance_scaling.rs  profiled_pathfinding.rs
(+76 files in other folders)
