[package]
name = "peregrine"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.17.3", features = ["serialize"] }
bevy_common_assets = { version = "0.14.0", features = ["ron"] }
bincode = "1.3"
fixed = { version = "1.29.0", features = ["serde"] }
flate2 = "1.1.5"
rand = "0.9.2"
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
