[package]
name = "peregrine"
version = "0.1.0"
edition = "2021"

[features]
default = []
perf_stats = []

[dependencies]
peregrine_macros = { path = "crates/peregrine_macros" }
bevy = { version = "0.17.3", features = ["serialize"] }
bevy_common_assets = { version = "0.14.0", features = ["ron"] }
bincode = "1.3"
chrono = "0.4"
fixed = { version = "1.29.0", features = ["serde"] }
rustc-hash = "2.1"
flate2 = "1.1.5"
rand = "0.9.2"
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
smallvec = { version = "1.13", features = ["serde"] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
fastrand = "2.0"
serde_json = "1.0"
